setup/k8s/credit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-service
  namespace: banka-1
spec:
  selector:
    app: credit-service
  ports:
    - name: http
      port: 8089
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit-service
  template:
    metadata:
      labels:
        app: credit-service
    spec:
      containers:
        - name: credit-service
          image: ghcr.io/raf-si-2025/banka-1-credit-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8089
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
