setup/k8s/interbank-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interbank-service
  namespace: banka-1
spec:
  selector:
    app: interbank-service
  ports:
    - name: http
      port: 8091
      targetPort: http
    - name: grpc
      port: 9091
      targetPort: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interbank-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interbank-service
  template:
    metadata:
      labels:
        app: interbank-service
    spec:
      containers:
        - name: interbank-service
          image: ghcr.io/raf-si-2025/banka-1-interbank-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8091
            - name: grpc
              containerPort: 9091
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
