setup/k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: banka-1
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      port: 8006
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ghcr.io/raf-si-2025/banka-1-notification-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8006
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
