setup/k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: banka-1
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: Always
          command:
            - redis-server
            - --save
            - ""
            - --appendonly
            - "no"
            - --maxmemory
            - 128mb
            - --maxmemory-policy
            - allkeys-lru
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 192Mi
