setup/k8s/saga-orchestrator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saga-orchestrator-service
  namespace: banka-1
spec:
  selector:
    app: saga-orchestrator-service
  ports:
    - name: http
      port: 8095
      targetPort: http
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: saga-orchestrator-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saga-orchestrator-service
  template:
    metadata:
      labels:
        app: saga-orchestrator-service
    spec:
      containers:
        - name: saga-orchestrator-service
          image: ghcr.io/raf-si-2025/banka-1-saga-orchestrator-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8095
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
