setup/k8s/trading-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trading-service
  namespace: banka-1
spec:
  selector:
    app: trading-service
  ports:
    - name: http
      port: 8088
      targetPort: http
    - name: grpc
      port: 9088
      targetPort: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading-service
  template:
    metadata:
      labels:
        app: trading-service
    spec:
      containers:
        - name: trading-service
          image: ghcr.io/raf-si-2025/banka-1-trading-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8088
            - name: grpc
              containerPort: 9088
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
