setup/k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: banka-1
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8081
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ghcr.io/raf-si-2025/banka-1-user-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
